[gd_scene load_steps=9 format=2]

[ext_resource path="res://Asset/Character/Jaka.png" type="Texture" id=1]
[ext_resource path="res://Asset/Font/jumper_3/JumperPERSONALUSEONLY-RegularItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Asset/Character/Ryan.png" type="Texture" id=3]
[ext_resource path="res://Scene & Script/Galeri/PanelKarakter/PanelKarakter.gd" type="Script" id=4]
[ext_resource path="res://Asset/Sound and Music/Sound/220206__gameaudio__beep-space-button.wav" type="AudioStream" id=5]
[ext_resource path="res://Asset/Sound and Music/Sound/220203__gameaudio__casual-death-loose.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="PanelKarakter" type="ColorRect"]
anchor_left = 0.45
anchor_top = 0.042
anchor_right = 0.95
anchor_bottom = 0.958
margin_top = -0.128
margin_bottom = 0.127991
color = Color( 0.380392, 0.372549, 0.443137, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jaka" type="TextureRect" parent="."]
anchor_left = 0.15
anchor_top = 0.068
anchor_right = 0.45
anchor_bottom = 0.318
margin_top = 0.0639992
margin_bottom = 0.0639954
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Jaka"]
anchor_top = 1.091
anchor_right = 1.0
anchor_bottom = 1.273
margin_top = -0.00801086
margin_bottom = 0.975998
custom_fonts/font = SubResource( 1 )
text = "Jaka"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selector" type="Label" parent="Jaka"]
anchor_top = 1.091
anchor_right = 1.0
anchor_bottom = 1.284
margin_top = -0.00801086
margin_bottom = 0.00799561
custom_fonts/font = SubResource( 2 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ryan" type="TextureRect" parent="."]
anchor_left = 0.55
anchor_top = 0.068
anchor_right = 0.85
anchor_bottom = 0.318
margin_top = 0.0639992
margin_bottom = 0.0639954
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ryan"]
anchor_top = 1.091
anchor_right = 1.0
anchor_bottom = 1.273
margin_top = -0.00801086
margin_bottom = 0.975998
custom_fonts/font = SubResource( 1 )
text = "Ryan"
align = 1
valign = 1

[node name="Selector" type="Label" parent="Ryan"]
anchor_top = 1.091
anchor_right = 1.0
anchor_bottom = 1.284
margin_top = -0.00801086
margin_bottom = 0.00799561
custom_fonts/font = SubResource( 2 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectOption" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SelectedOption" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Jaka2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.15
anchor_top = 0.614
anchor_right = 0.45
anchor_bottom = 0.864
margin_top = -0.128006
margin_bottom = -0.128021
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Jaka2"]
anchor_top = 1.091
anchor_right = 1.0
anchor_bottom = 1.273
margin_top = -0.00801086
margin_bottom = 0.975998
custom_fonts/font = SubResource( 1 )
text = "Jaka"
align = 1
valign = 1

[node name="Selector" type="Label" parent="Jaka2"]
anchor_top = 1.091
anchor_right = 1.0
anchor_bottom = 1.284
margin_top = -0.00801086
margin_bottom = 0.00799561
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="Ryan2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.55
anchor_top = 0.614
anchor_right = 0.85
anchor_bottom = 0.864
margin_top = -0.128006
margin_bottom = -0.128021
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ryan2"]
anchor_top = 1.091
anchor_right = 1.0
anchor_bottom = 1.273
margin_top = -0.00801086
margin_bottom = 0.975998
custom_fonts/font = SubResource( 1 )
text = "Ryan"
align = 1
valign = 1

[node name="Selector" type="Label" parent="Ryan2"]
anchor_top = 1.091
anchor_right = 1.0
anchor_bottom = 1.284
margin_top = -0.00801086
margin_bottom = 0.00799561
custom_fonts/font = SubResource( 2 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}
